src/test/ui/error-codes/E0128.stderr
error[E0128]: type parameters with a default cannot use forward declared identifiers
  --> $DIR/E0128.rs:1:14
   |
LL | struct Foo<T=U, U=()> {
   |              ^ defaulted type parameters cannot be forward declared

error: aborting due to previous error

For more information about this error, try `rustc --explain E0128`.
